--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,15 @@
         </div>
 
             <button class="btn btn-success col-sm-offset-2">Login</button>
+        <div class="col-sm-offset">
+        <a href="/facebook">
+            <img src="/images/facebook.jpg"/>
+        </a>
+            <a href="/twitter">
+                <img src="/images/twitter.png"/>
+            </a>
+        </div>
+
         <hr/>
         Need access? <a href="register" title="Register">Regster</a>
     </form>
